{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 18,
  "lineage": "c4fdbf22-bdb3-d107-8d63-9e066efde548",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshack_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:internet-gateway/igw-04c37c27d6cbdcc1e",
            "id": "igw-04c37c27d6cbdcc1e",
            "owner_id": "651706773034",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-igw"
            },
            "tags_all": {
              "Name": "devopsshack-igw"
            },
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshack_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:route-table/rtb-060d7e5c285ac1c77",
            "id": "rtb-060d7e5c285ac1c77",
            "owner_id": "651706773034",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c37c27d6cbdcc1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshack-route-table"
            },
            "tags_all": {
              "Name": "devopsshack-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "rtb-060d7e5c285ac1c77",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04df930ae434cf75d",
            "region": "ap-south-1",
            "route_table_id": "rtb-060d7e5c285ac1c77",
            "subnet_id": "subnet-00664dd2921239df2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d96e98f57697fba",
            "region": "ap-south-1",
            "route_table_id": "rtb-060d7e5c285ac1c77",
            "subnet_id": "subnet-06e3ec8c1e47526b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:security-group/sg-03c96873d2f3b2de5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c96873d2f3b2de5",
            "ingress": [],
            "name": "terraform-20251218140417369300000001",
            "name_prefix": "terraform-",
            "owner_id": "651706773034",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshack-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "sg-03c96873d2f3b2de5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:security-group/sg-03c28482fad1bc531",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c28482fad1bc531",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20251218140417369300000002",
            "name_prefix": "terraform-",
            "owner_id": "651706773034",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-node-sg"
            },
            "tags_all": {
              "Name": "devopsshack-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "sg-03c28482fad1bc531",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:subnet/subnet-00664dd2921239df2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00664dd2921239df2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706773034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-0"
            },
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "subnet-00664dd2921239df2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:subnet/subnet-06e3ec8c1e47526b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e3ec8c1e47526b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "651706773034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-1"
            },
            "vpc_id": "vpc-0ffe353f7e7d56970"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "subnet-06e3ec8c1e47526b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshack_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:651706773034:vpc/vpc-0ffe353f7e7d56970",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a273ef53a5748a18",
            "default_route_table_id": "rtb-0c0ab54840bf9d9b4",
            "default_security_group_id": "sg-05e44baddf9e5f9a7",
            "dhcp_options_id": "dopt-05f3b078380feec05",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffe353f7e7d56970",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0ab54840bf9d9b4",
            "owner_id": "651706773034",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-vpc"
            },
            "tags_all": {
              "Name": "devopsshack-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "651706773034",
            "id": "vpc-0ffe353f7e7d56970",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}